--- a/scss/partials/page-sections/_service_cards.scss
+++ b/scss/partials/page-sections/_service_cards.scss
@@ -124,6 +124,9 @@
 }  // @mixin
 
 .nm-cards {
+
+  min-height: 100%;
+
   // Styles for the nm-cards (flex) container
   @include flexbox;
   @include flex-flow((column wrap));
